--- a/build.gradle
+++ b/build.gradle
@@ -116,3 +116,5 @@ buildDeb {
     link("/etc/init.d/daemon-demo", "/opt/local/daemon-demo/bin/daemon-demo.jar")
     link("/opt/local/daemon-demo/bin/daemon-demo.conf", "/opt/local/daemon-demo/conf/daemon-demo.conf")
 }
+
+defaultTasks 'clean', 'build', 'buildDeb'
